--- a/main.html
+++ b/main.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+	<div id="container">
+		<input id="name" name="name">
+		<input id="year" name="year" type="number">
+		<button id="button"> Submit </button>
+		<h3 id="url">https://localhost:8080/</h3>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
